<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtPriceWithoutTax"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:text="123"
        app:layout_constraintStart_toEndOf="@+id/lblPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/lbl_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUnitPriceWithoutTax"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:text="123"
        app:layout_constraintStart_toEndOf="@+id/lblUnitPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtUnits" />

    <EditText
        android:id="@+id/txtUnitPriceTaxIncluded"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:text="123"
        app:layout_constraintStart_toEndOf="@+id/txtUnitPriceWithoutTax"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceTaxIncluded" />

    <TextView
        android:id="@+id/lblUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_unit_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUnits" />

    <TextView
        android:id="@+id/lblUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/lbl_units"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrice" />

    <EditText
        android:id="@+id/txtPriceTaxIncluded"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:text="123"
        app:layout_constraintStart_toEndOf="@+id/txtPriceWithoutTax"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUnits"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:text="123"
        app:layout_constraintStart_toEndOf="@+id/lblUnits"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceWithoutTax" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_without_tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_tax_included"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="74dp"
        android:text="@string/btn_calc_price"
        app:layout_constraintStart_toEndOf="@+id/txtPriceTaxIncluded"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/btn_calc_unitprice"
        app:layout_constraintStart_toEndOf="@+id/txtUnitPriceTaxIncluded"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcPrice" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="351dp"
        android:layout_height="382dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUnitPriceWithoutTax">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCalcResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/btn_clear"
        app:layout_constraintStart_toEndOf="@+id/txtUnitPriceTaxIncluded"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcUnitPrice" />

    <Spinner
        android:id="@+id/cmbTax"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorButtonNormal"
        android:entries="@array/taxList"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/txtUnits"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceTaxIncluded" />

    <Spinner
        android:id="@+id/cmbRounding"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorButtonNormal"
        android:entries="@array/roudingList"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/txtPriceTaxIncluded"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>